<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/name"
        android:textStyle="bold"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="224dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/content"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="157dp"
        android:text="@string/content" />

    <TextView
        android:id="@+id/time"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="254dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="22dp"
        android:text="@string/time" />

    <ImageView
        android:id="@+id/imageViewStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        app:srcCompat="@android:drawable/star_on" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="-1dp"
        android:background="#c0c0c0" />


</RelativeLayout>