<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">


    <TextView
        android:id="@+id/name"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="241dp"
        android:text="@string/name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/content"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="157dp"
        android:text="@string/content" />


    <TextView
        android:id="@+id/time"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="202dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="73dp"
        android:text="@string/time" />

    <ImageView
        android:id="@+id/imageViewStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        app:srcCompat="@android:drawable/star_on" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-1dp"
        android:background="#c0c0c0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="23dp"
        android:text="From " />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="173dp"
        android:text="on " />


</RelativeLayout>